force-app/main/default/objects/Sell_out_Inventory__c/Sell_out_Inventory__c.object-meta.xml
<CustomObject>
    <label>Sell out Inventory</label>
    <nameField>
        <displayFormat>SOI-{00000000}</displayFormat>
        <label>Sell out Inventory Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sell out Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>