force-app/main/default/objects/Sell_out_Inventory__c/fields/act_amt_lcc__c.field-meta.xml
<CustomField>
    <fullName>act_amt_lcc__c</fullName>
    <label>act_amt_lcc</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>