force-app/main/default/objects/Sell_out_Inventory__c/fields/act_qty__c.field-meta.xml
<CustomField>
    <fullName>act_qty__c</fullName>
    <label>act_qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>