force-app/main/default/objects/Sell_out_Inventory__c/fields/avl_soh__c.field-meta.xml
<CustomField>
    <fullName>avl_soh__c</fullName>
    <label>avl_soh</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>