force-app/main/default/objects/Sell_out_Inventory__c/fields/brand__c.field-meta.xml
<CustomField>
    <fullName>brand__c</fullName>
    <label>brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>