force-app/main/default/objects/Sell_out_Inventory__c/fields/ch_store_name__c.field-meta.xml
<CustomField>
    <fullName>ch_store_name__c</fullName>
    <label>ch_store_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>