force-app/main/default/objects/Sell_out_Inventory__c/fields/ch_store_no__c.field-meta.xml
<CustomField>
    <fullName>ch_store_no__c</fullName>
    <description>渠道给门店的编码</description>
    <label>Channel Store Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>