force-app/main/default/objects/Sell_out_Inventory__c/fields/Channel_item__c.field-meta.xml
<CustomField>
    <fullName>Channel_item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel item</label>
    <referenceTo>Channel_item__c</referenceTo>
    <relationshipLabel>Sell out Inventory</relationshipLabel>
    <relationshipName>Sell_out_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>