force-app/main/default/objects/Sell_out_Inventory__c/fields/channel_model__c.field-meta.xml
<CustomField>
    <fullName>channel_model__c</fullName>
    <label>channel_model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>