force-app/main/default/objects/Sell_out_Inventory__c/fields/create_mnth__c.field-meta.xml
<CustomField>
    <fullName>create_mnth__c</fullName>
    <label>Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>