force-app/main/default/objects/Sell_out_Inventory__c/fields/create_yr__c.field-meta.xml
<CustomField>
    <fullName>create_yr__c</fullName>
    <label>create_yr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>