force-app/main/default/objects/Sell_out_Inventory__c/fields/curr__c.field-meta.xml
<CustomField>
    <fullName>curr__c</fullName>
    <label>curr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>