force-app/main/default/objects/Sell_out_Inventory__c/fields/cust_name__c.field-meta.xml
<CustomField>
    <fullName>cust_name__c</fullName>
    <label>cust_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>