force-app/main/default/objects/Sell_out_Inventory__c/fields/cust_no__c.field-meta.xml
<CustomField>
    <fullName>cust_no__c</fullName>
    <label>cust_no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>