force-app/main/default/objects/Sell_out_Inventory__c/fields/Days_of_Inventory_w6__c.field-meta.xml
<CustomField>
    <fullName>Days_of_Inventory_w6__c</fullName>
    <description>库存可支撑天数，计算公式 = 可用库存/(过去42天销量/42)</description>
    <inlineHelpText>Number of days that inventory can support</inlineHelpText>
    <label>Days_of_Inventory_w6</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>