force-app/main/default/objects/Sell_out_Inventory__c/fields/ean_code__c.field-meta.xml
<CustomField>
    <fullName>ean_code__c</fullName>
    <label>ean_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>