force-app/main/default/objects/Sell_out_Inventory__c/fields/onln_offln__c.field-meta.xml
<CustomField>
    <fullName>onln_offln__c</fullName>
    <label>onln_offln</label>
    <length>255</length>
    <type>Text</type>
</CustomField>