force-app/main/default/objects/Sell_out_Inventory__c/fields/prdln__c.field-meta.xml
<CustomField>
    <fullName>prdln__c</fullName>
    <label>prdln</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2020</fullName>
                <label>LCAC</label>
            </value>
            <value>
                <fullName>0402</fullName>
                <label>Medical Device</label>
            </value>
            <value>
                <fullName>0211</fullName>
                <label>Dishwasher</label>
            </value>
            <value>
                <fullName>0210</fullName>
                <label>Cooking</label>
            </value>
            <value>
                <fullName>0207</fullName>
                <label>Hitachi Commercial AC</label>
            </value>
            <value>
                <fullName>0205</fullName>
                <label>Small Domestic Home Appliances</label>
            </value>
            <value>
                <fullName>0204</fullName>
                <label>WM</label>
            </value>
            <value>
                <fullName>0203</fullName>
                <label>Freezer</label>
            </value>
            <value>
                <fullName>0202</fullName>
                <label>Refrigerator</label>
            </value>
            <value>
                <fullName>0200</fullName>
                <label>AC</label>
            </value>
            <value>
                <fullName>01A0</fullName>
                <label>B-Monitor</label>
            </value>
            <value>
                <fullName>0160</fullName>
                <label>Sound Bar</label>
            </value>
            <value>
                <fullName>0150</fullName>
                <label>Laser TV</label>
            </value>
            <value>
                <fullName>0120</fullName>
                <label>Mobile</label>
            </value>
            <value>
                <fullName>0110</fullName>
                <label>TV</label>
            </value>
            <value>
                <fullName>0180</fullName>
                <label>多媒体.备件</label>
            </value>
            <value>
                <fullName>0190</fullName>
                <label>黑电其他</label>
            </value>
            <value>
                <fullName>0291</fullName>
                <label>热水器</label>
            </value>
            <value>
                <fullName>0209</fullName>
                <label>酒柜</label>
            </value>
            <value>
                <fullName>0290</fullName>
                <label>白电其他</label>
            </value>
            <value>
                <fullName>0212</fullName>
                <label>商用冷柜</label>
            </value>
            <value>
                <fullName>0280</fullName>
                <label>家电.备件</label>
            </value>
            <value>
                <fullName>0292</fullName>
                <label>Gorenje非核心业务</label>
            </value>
            <value>
                <fullName>0401</fullName>
                <label>医疗超声</label>
            </value>
            <value>
                <fullName>0403</fullName>
                <label>智慧城市</label>
            </value>
            <value>
                <fullName>5509</fullName>
                <label>VIDAA</label>
            </value>
            <value>
                <fullName>5505</fullName>
                <label>VIDAA技术授权费</label>
            </value>
            <value>
                <fullName>5504</fullName>
                <label>VIDAA平台运营其他</label>
            </value>
            <value>
                <fullName>5500</fullName>
                <label>VIDAA APP分成</label>
            </value>
            <value>
                <fullName>5503</fullName>
                <label>VIDAA广告收益</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>