force-app/main/default/objects/Sell_out_Inventory__c/fields/sgmt__c.field-meta.xml
<CustomField>
    <fullName>sgmt__c</fullName>
    <label>sgmt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>