force-app/main/default/objects/Sell_out_Inventory__c/fields/st_intr__c.field-meta.xml
<CustomField>
    <fullName>st_intr__c</fullName>
    <label>Stock in transit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>