force-app/main/default/objects/Sell_out_Inventory__c/fields/stock_on_order__c.field-meta.xml
<CustomField>
    <fullName>stock_on_order__c</fullName>
    <label>stock_on_order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>