force-app/main/default/objects/Sell_out_Inventory__c/fields/store_name__c.field-meta.xml
<CustomField>
    <fullName>store_name__c</fullName>
    <label>store_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>