force-app/main/default/objects/Sell_out_Inventory__c/fields/store_no__c.field-meta.xml
<CustomField>
    <fullName>store_no__c</fullName>
    <description>从信数detail表获取的store_no字段，为空，不使用</description>
    <label>Store No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>