force-app/main/default/objects/Sell_out_Inventory__c/fields/sub_prdln__c.field-meta.xml
<CustomField>
    <fullName>sub_prdln__c</fullName>
    <label>sub_prdln</label>
    <length>255</length>
    <type>Text</type>
</CustomField>