force-app/main/default/objects/Sell_out_Inventory__c/fields/sz__c.field-meta.xml
<CustomField>
    <fullName>sz__c</fullName>
    <label>sz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>